deploy/volumes/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15001

static_resources:
  listeners:
    - name: listener_ingredient_scan
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: ingredient_scan_service
                    domains: [ "*" ]
                    routes:
                      # Public endpoints (no auth required) - возможно они не нужны
                      - match: { prefix: "/health" }
                        route: { cluster: ingredient-scan-app }
                      - match: { prefix: "/v1/analysis/" }
                        route: { cluster: ingredient-scan-app }

                      # Protected endpoints (JWT required)
                      - match: { prefix: "/v1/scan/" }
                        route: { cluster: ingredient-scan-app }
                      - match: { prefix: "/v1/composition/" }
                        route: { cluster: ingredient-scan-app }
                      - match: { prefix: "/v1/components/" }
                        route: { cluster: ingredient-scan-app }
                      # Endpoint to S3 - пока S3 нет, исследую вопрос
                      - match: { prefix: "/v1/upload/" }
                        route: { cluster: ingredient-scan-app }

                      # Keycloak endpoints
                      - match: { prefix: "/admin/" }
                        route: { cluster: keycloak }
                      - match: { prefix: "/realms/" }
                        route: { cluster: keycloak }
                      - match: { prefix: "/resources/" }
                        route: { cluster: keycloak }
              http_filters:
                - name: envoy.filters.http.jwt_authn
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                    providers:
                      keycloak_provider:
                        issuer: "http://localhost:8080/realms/ingredient-scan"
                        remote_jwks:
                          http_uri:
                            uri: http://keycloak:8080/realms/ingredient-scan/protocol/openid-connect/certs
                            cluster: keycloak
                            timeout: 5s
                          cache_duration:
                            seconds: 300
                        # Пробрасываем JWT в заголовок запроса
                        forward: true
                        forward_payload_header: x-jwt-payload
                    rules:
                      - match: { prefix: "/v1/scan/" }
                        requires: { provider_name: keycloak_provider }
                      - match: { prefix: "/v1/composition/" }
                        requires: { provider_name: keycloak_provider }
                      - match: { prefix: "/v1/components/" }
                        requires: { provider_name: keycloak_provider }
                        # Endpoint to S3 - пока S3 нет, исследую вопрос
                      - match: { prefix: "/v1/upload/" }
                        requires: { provider_name: keycloak_provider }
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: ingredient-scan-app
      connect_timeout: 30s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: ingredient-scan-app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ingredient-scan-app
                      port_value: 8080

    - name: keycloak
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080
